// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown> when all dropdowns are closed should match the snapshot 1`] = `
<DocumentFragment>
  <li
    class="dropdown-container"
  >
    <div
      class="dropdown"
    >
      <button
        class="dropdown-label"
      >
        Rockets
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-caret-up fa-xs ml-2"
          data-icon="caret-up"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8H288c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`<Dropdown> when another dropdown is open should match the snapshot 1`] = `
<DocumentFragment>
  <li
    class="dropdown-container"
  >
    <div
      class="dropdown"
    >
      <button
        class="dropdown-label"
      >
        Rockets
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-caret-up fa-xs ml-2"
          data-icon="caret-up"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M182.6 137.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-9.2 9.2-11.9 22.9-6.9 34.9s16.6 19.8 29.6 19.8H288c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-128-128z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`<Dropdown> when the dropdown is open should match the snapshot 1`] = `
<DocumentFragment>
  <li
    class="dropdown-container"
  >
    <div
      class="dropdown"
    >
      <button
        class="dropdown-label"
      >
        Rockets
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-caret-down fa-xs ml-2"
          data-icon="caret-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 320 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"
            fill="currentColor"
          />
        </svg>
      </button>
      <ul>
        <li
          class="dropdown-item"
        >
          <a
            class="dropdown-item-link"
            href="/rockets/engines"
          >
            Engines
          </a>
        </li>
        <li
          class="dropdown-item"
        >
          <a
            class="dropdown-item-link"
            href="/rockets/fuel-tanks"
          >
            Fuel Tanks
          </a>
        </li>
      </ul>
    </div>
  </li>
</DocumentFragment>
`;
